--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,11 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:ui": "npm run build && copy build ../backend",
-    "deploy": "git push heroku main",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8000",
   "browserslist": {
